--- a/scripts/scRNAseq/2_pancreas_only_seurat_generation.Rmd
+++ b/scripts/scRNAseq/2_pancreas_only_seurat_generation.Rmd
@@ -84,3 +84,31 @@ pan8 <- AddMetaData(pan8, new_metadata) #add to the meta data
 saveRDS(pan4, "objects/seurat_cd4_panonly_clustered.rds")
 saveRDS(pan8, "objects/seurat_cd8_panonly_clustered.rds")
 ```
+
+Next, re-calculate the number of each clonotype within the pancreas (not including other tissues):
+```{r calculate pancreas clonotype counts}
+new_metadata <- pan4@meta.data %>% 
+                  rownames_to_column('barcode') %>%
+                  filter(!is.na(clonotype_id)) %>%
+                  group_by(clonotype_id) %>% 
+                  mutate(pan_clonotype_count = n(), 
+                  pan_clonotype_count_bin = cut(pan_clonotype_count, 
+                                              breaks=c(0,1,5,20,100,250), 
+                                              labels=c("1","2-4","5-19","20-99","100-250"))) %>%
+                  column_to_rownames('barcode') %>%
+                  dplyr::select(pan_clonotype_count, pan_clonotype_count_bin)
+pan4 <- AddMetaData(pan4, new_metadata) #add the new clonotype count within the pancreas only cells
+
+new_metadata <- pan8@meta.data %>% 
+                  rownames_to_column('barcode') %>%
+                  filter(!is.na(clonotype_id)) %>%
+                  group_by(clonotype_id) %>% 
+                  mutate(pan_clonotype_count = n(), 
+                  pan_clonotype_count_bin = cut(pan_clonotype_count, 
+                                              breaks=c(0,1,5,20,100,250), 
+                                              labels=c("1","2-4","5-19","20-99","100-250"))) %>%
+                  column_to_rownames('barcode') %>%
+                  dplyr::select(pan_clonotype_count, pan_clonotype_count_bin)
+pan8 <- AddMetaData(pan8, new_metadata) #add the new clonotype count within the pancreas only cells
+```
+
