fixed some of the issues with module scores

--- a/scripts/scRNAseq/2_figure1_plots.Rmd
+++ b/scripts/scRNAseq/2_figure1_plots.Rmd
@@ -23,6 +23,9 @@ require(gridExtra, quietly = T) #display multiple plots
 require(ggrepel, quietly = T) #labels for plots
 require(tibble, quietly = T) #rownames_to_column function
 require(useful, quietly = T) #corner function to peek at data.frames
+require(viridis, quietly = T) #viridis color palettes
+require(readxl, quietly = T) #reading Excel files
+require(msigdbr, quietly = T) #accessing gene signatures from mSigDB
 source("scripts/utils.R") #custom color palettes and other functions
 set.seed(1) #set a seed for reproducibility
 ```
@@ -33,7 +36,7 @@ cd4 <- readRDS("objects/seurat_cd4_clustered.rds")
 cd8 <- readRDS("objects/seurat_cd8_clustered.rds")
 ```
 
-First, all of the cells will be clustered:
+First, all of the T cells will be clustered on a single UMAP. Additional UMAPs showing distribution of tissues, treatment groups, cell types, and clonotype expansion are also plotted:
 ```{r Improved cluster UMAP}
 #define the centroids for labeling the clusters
 integrated_cls <- seurat_integrated@meta.data %>% 
@@ -42,7 +45,7 @@ integrated_cls <- seurat_integrated@meta.data %>%
         summarise(U1=mean(allcells_UMAP_1),U2=mean(allcells_UMAP_2)) %>% 
         data.frame()
 
-p_cluster <- seurat_integrated@meta.data %>% 
+p_allcells_cluster <- seurat_integrated@meta.data %>% 
               ggplot(aes(x = allcells_UMAP_1, 
                        y = allcells_UMAP_2, 
                        color = seurat_clusters)) + 
@@ -50,22 +53,286 @@ p_cluster <- seurat_integrated@meta.data %>%
               theme_minimal() +
               theme(axis.title = element_blank(),
                     axis.text = element_blank(),
+                    text = element_text(size = 15),
                     panel.grid = element_blank()) +
               labs(x='UMAP 1', 
                    y='UMAP 2', 
                    color=NULL,
                    title = "All T cells") +
-              guides(color=guide_legend(), size=guide_legend()) +
               scale_alpha_continuous(range = c(0.4,1)) +
               scale_size_continuous(range=c(1,3)) +
-              geom_label_repel(data = integrated_cls, 
+              geom_label_repel(data = integrated_cls, #change depending on Seurat used
                                mapping = aes(x = U1,
                                              y=U2, 
                                              label = seurat_clusters), 
                                size = 5, 
                                min.segment.length = Inf, 
                                show.legend = FALSE) +
-              guides(color=guide_legend(override.aes = list(alpha=1,size=5,shape=19)), 
+              guides(color=guide_legend(override.aes = list(alpha=1, 
+                                                            size=5, 
+                                                            shape=19)), 
                      size=guide_legend()) + 
-              scale_color_manual(values = custom_colors("clusters")))
+              scale_color_manual(values = custom_colors("clusters"))
+
+p_treatment <- seurat_integrated@meta.data %>% 
+    ggplot(aes(x = allcells_UMAP_1, 
+               y = allcells_UMAP_2, 
+               color = treatment)) + 
+    geom_point(shape = 16, alpha = 0.3) +
+    theme_minimal() +
+    theme(axis.title = element_blank(),
+          axis.text = element_blank(),
+          panel.grid = element_blank(),
+          text = element_text(size = 15),
+          legend.position = c(0.1,0.1)) +
+    labs(x='UMAP 1', 
+         y='UMAP 2', 
+         color=NULL,
+         title = "All T cells: Treatment groups") +
+    scale_alpha_continuous(range = c(0.4,1)) +
+    scale_size_continuous(range=c(1,3)) +
+    guides(color=guide_legend(override.aes = list(alpha=1, 
+                                                  size=5, 
+                                                  shape=19)), 
+           size=guide_legend()) + 
+    scale_color_manual(values = custom_colors("treatments"))
+
+p_tissues <- seurat_integrated@meta.data %>% 
+    ggplot(aes(x = allcells_UMAP_1, 
+               y = allcells_UMAP_2, 
+               color = tissue)) + 
+    geom_point(shape = 16, alpha = 0.3) +
+    theme_minimal() +
+    theme(axis.title = element_blank(),
+          axis.text = element_blank(),
+          panel.grid = element_blank(),
+          text = element_text(size = 15),
+          legend.position = c(0.1,0.1)) +
+    labs(x='UMAP 1', 
+         y='UMAP 2', 
+         color=NULL,
+         title = "All T cells: Tissues") +
+    scale_alpha_continuous(range = c(0.4,1)) +
+    scale_size_continuous(range=c(1,3)) +
+    guides(color=guide_legend(override.aes = list(alpha=1, 
+                                                  size=5, 
+                                                  shape=19)), 
+           size=guide_legend()) + 
+    scale_color_manual(values = custom_colors("tissues"))
+
+p_celltypes <- seurat_integrated@meta.data %>% 
+    ggplot(aes(x = allcells_UMAP_1, 
+               y = allcells_UMAP_2, 
+               color = celltype)) + 
+    geom_point(shape = 16, alpha = 0.3) +
+    theme_minimal() +
+    theme(axis.title = element_blank(),
+          axis.text = element_blank(),
+          panel.grid = element_blank(),
+          text = element_text(size = 15),
+          legend.position = c(0.1,0.1)) +
+    labs(x='UMAP 1', 
+         y='UMAP 2', 
+         color=NULL,
+         title = "All T cells: T cell types") +
+    scale_alpha_continuous(range = c(0.4,1)) +
+    scale_size_continuous(range=c(1,3)) +
+    guides(color=guide_legend(override.aes = list(alpha=1, 
+                                                  size=5, 
+                                                  shape=19)), 
+           size=guide_legend()) + 
+    scale_color_manual(values = custom_colors("celltypes"))
+
+p_expansion <- seurat_integrated@meta.data %>% 
+    ggplot(aes(x = allcells_UMAP_1, 
+               y = allcells_UMAP_2, 
+               color = log10(clonotype_count+1))) + 
+    geom_point(shape = 16, alpha = 0.3) +
+    theme_minimal() +
+    theme(axis.title = element_blank(),
+          axis.text = element_blank(),
+          panel.grid = element_blank(),
+          text = element_text(size = 15),
+          legend.position = c(0.2,0.1)) +
+    labs(x='UMAP 1', 
+         y='UMAP 2', 
+         color=expression(log[10](clonotype~count+1)),
+         title = "All T cells: Clonotype expansion") +
+    scale_alpha_continuous(range = c(0.4,1)) +
+    scale_size_continuous(range=c(1,3)) +
+    scale_color_viridis(direction = -1, option = "D") +
+    guides(color = guide_colorbar(ticks.color = NA)) #removes ticks from colorbar
+
+grid.arrange(p_tissues, p_treatment, p_celltypes, p_expansion, nrow = 2)
+```
+
+Next, create a stacked bar chart showing the distribution of tissues in each Seurat cluster:
+```{r stacked bar chart of tissues per seurat cluster}
+p_tissue_per_seurat_cluster <- seurat_integrated@meta.data %>% 
+    ggplot(aes(x=factor(seurat_clusters, 
+                        levels = rev(levels(seurat_integrated$seurat_clusters))), 
+                        fill=tissue)) + 
+    geom_bar(stat="count", 
+             position = "fill") + 
+    scale_x_discrete(expand = c(0,0)) +
+    scale_y_continuous(labels = scales::percent_format(accuracy = 1), 
+                       expand=c(0,0)) +
+    theme_minimal() +
+    theme(panel.grid = element_blank(),
+          text = element_text(size = 15),
+          legend.position = "right") +
+    labs(title = "All T cells", 
+         y = "Percent of Seurat Cluster", 
+         x = NULL,
+         color = "Tissue") +
+    scale_fill_manual(values = custom_colors("tissues")) +
+    coord_flip()
+p_tissue_per_seurat_cluster
+```
+
+To plot a heatmap of genes of interest across the clusters in Morpheus, the following manually annotated list of genes of interest, **goi**, will be examined. The average expression for each cluster will be determined and this data will be used to plot in Morpheus (Broad institute). The average expression for every gene will be determined to plot the pearson correlations for the seurat clusters across tissues as well. 
+```{r heatmap data for Morpheus}
+avgs <- as.data.frame(t(AverageExpression(seurat_integrated, assay = "RNA", group.by = c("tissue", "seurat_clusters"))$RNA)) #get average expression for each gene (column) in each tissue/cluster pair (row)
+avgs <- avgs %>% rownames_to_column("tissue_and_cluster")
+avgs <- avgs %>% 
+          mutate(tissue = sapply(tissue_and_cluster, function(x) strsplit(x, "_")[[1]][1]), 
+                 seurat_clusters = sapply(tissue_and_cluster, function(x) paste(strsplit(x, "_")[[1]][-1], collapse = "_"))) %>% 
+          relocate(tissue_and_cluster, tissue, seurat_clusters) #move columns to left of data frame
+write.table(avgs, "output/seurat_cluster_avg_expression_all_genes_for_morpheus.tsv", sep = "\t", quote = F, row.names = F) #write the data to table
+
+memory_genes <- c("Sell","Il7r","Bcl2","Lef1")
+exh_genes <- c("Pdcd1","Havcr2","Lag3","Cd38","Ctla4","Tigit","Cd101","Ctla4","Tox","Tcf7","Slamf6")
+surface <- c("Cd226","Icos","Cd28","Tnfsf9","Tnfsf4","Il2rb","Tnfsf14","Ifngr1","Entpd1","Nrn1")
+eff_genes <- c("Ifng","Fasl","Gzma","Gzmk","Gzmb","Prf1","Tnfsf10","Tnf","Il2","Gzmm","Nkg7","Klrd1","Itgal","Klrg1")
+tf <- c("Batf","Eomes","Bcl6","Stat1","Tbx21","Runx1","Runx3","Prdm1","Nfatc1","Id2","Nfkb2","Hif1a","Bach2","Id3","Satb1","Nfkb1","Tox2","Bcl6","Zeb2","Klf2","Klf6")
+chemokines <- c("Cx3cr1","Ccl5","Ccl4","Ccl3","Cxcr5","Cxcr6","Cxcr3","Ccr7","Ccr9","Cxcl10","Ccr8","S1pr5","Xcl1")
+apoptosis <- c("Casp3","Tnfsf11","Nr4a3","Nfkb1","Nlrp3")
+proliferation <- c("Mki67","Stmn1","Birc5","Pclaf")
+ifnstim <- c("Isg15","Ifi27l2a","Ifit1","Ifit3")
+
+goi <- c(coinh,surface,eff,tf,chemokines,apoptosis,proliferation,ifnstim)
+
+# create a data frame of annotated genes
+goi_annot <- data.frame(gene = goi, 
+           group = c(rep("coinhibtory",length(coinh)),
+                     rep("surface",length(surface)),
+                     rep("effector",length(eff)),
+                     rep("TF",length(tf))
+                     ,rep("chemokines",length(chemokines)),
+                     rep("apoptosis",length(apoptosis)),
+                     rep("proliferation",length(proliferation)),
+                     rep("ifnstim",length(ifnstim))))
+
+avgs <- as.data.frame(AverageExpression(seurat_integrated, features = goi, assay = "RNA", group.by = "seurat_clusters")$RNA) #get average expression for each gene of interest
+avgs <- avgs %>% rownames_to_column("gene")
+avgs <- merge(goi_annot, avgs, by = "gene")
+write.table(avgs, "output/seurat_cluster_avg_expression_curated_genes_for_morpheus.tsv", sep = "\t", quote = F, row.names = F) #write the data to table
+
+seurat_markers <- FindAllMarkers(seurat_integrated, min.pct = 0.25, only.pos = T, logfc.threshold = 0.25) %>%
+                     group_by(cluster) %>%
+                     filter(p_val_adj < 0.05) %>%
+                     group_by(cluster) %>%
+                     arrange(desc(avg_log2FC), .by_group = T) %>%
+                     top_n(n = 50, wt = avg_log2FC)
+
+saveRDS(seurat_markers, "objects/integrated_seurat_FindAllMarkers.rds")
+
+avgs <- as.data.frame(AverageExpression(seurat_integrated, assay = "RNA", group.by = "seurat_clusters")$RNA) #get average expression for each gene (column) in each cluster (row)
+avgs <- avgs %>% rownames_to_column("gene")
+
+top10_genes <- seurat_markers %>% group_by(cluster) %>%
+                      arrange(desc(avg_log2FC), .by_group = T) %>%
+                      top_n(n = 20, wt = avg_log2FC) %>%
+                      dplyr::select(gene, cluster)
+
+write.table(top10_genes, "output/integrated_seurat_FindAllMarkers_top20.tsv", quote = F, sep = "\t", row.names = F)
+```
+
+Next, a dot plot will be generated to show the expression of various gene signatures for the clusters:
+```{r dot plot of gene module scores}
+#read in data from excel sheets
+prog_exh <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Progenitor Exh.")$gene
+term_exh <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Terminally Exh.")$gene
+eff_like <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Effector-like")$gene
+trm <- read_excel("ref/signatures/20200711_Beura_Trm_2017_Immunity.xlsx", sheet = "Beura_FRT_TRM_UP",col_names = F)$`...1`
+nonbystander <- read_excel("ref/signatures/20200718_Mognol_PNAS2017_bystanders.xlsx", sheet = "OT-1 UP (TS)",col_names = F)$`...1`
+bystander <- read_excel("ref/signatures/20200718_Mognol_PNAS2017_bystanders.xlsx", sheet = "P14 UP (bystander)",col_names = F)$`...1`
+cd8_activation <- read.table("ref/signatures/cd8_activation_sarkar_up.txt")$V1
+cell_cycle <- read.table("ref/signatures/cell_cycle_all_strong.txt")$V1
+lag3 <- read_excel("ref/signatures/stephanie_de_genes.xlsx") #these DE genes are from FindAllMarkers, so they will be parsed out into separate signatures
+  lag3exh1 <- lag3 %>% filter(cluster == 1) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3progexh2 <- lag3 %>% filter(cluster == 2) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3exh3 <- lag3 %>% filter(cluster == 3) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3act4 <- lag3 %>% filter(cluster == 4) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3act6 <- lag3 %>% filter(cluster == 6) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3eff7 <- lag3 %>% filter(cluster == 7) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3mem8 <- lag3 %>% filter(cluster == 8) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+
+#some of these are human gene symbols that must be converted to mouse
+trm <- convertHumanGeneList(trm)
+cell_cycle <- convertHumanGeneList(cell_cycle)
+cd8_activation <- convertHumanGeneList(cd8_activation)
+
+#some gene signatures will be from msigdb
+m_df <- msigdbr(species = "Mus musculus", category = "C7")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "GSE8678_IL7R_LOW_VS_HIGH_EFF_CD8_TCELL_UP") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "SLEC", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "GSE8678_IL7R_LOW_VS_HIGH_EFF_CD8_TCELL_DN") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "MPEC", assay = "RNA") 
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP", assay = "RNA")
+
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(prog_exh), name = "Miller2019_progenitor_exh", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(term_exh), name = "Miller2019_terminally_exh", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(eff_like), name = "Miller2019_effector_like", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(trm), name = "beura_trm", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(nonbystander), name = "nonbystander", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(bystander), name = "bystander", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(cd8_activation), name = "activation_sarkar", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(cell_cycle), name = "cell_cycle", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3exh1), name = "lag3exh1", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3progexh2), name = "lag3progexh2", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3exh3), name = "lag3exh3", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3mem8), name = "lag3mem8", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3eff7), name = "lag3eff7", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3act4), name = "lag3act4", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3act6), name = "lag3act6", assay = "RNA")
+
+gene_signatures <- c("SLEC1",
+                     "MPEC1",
+                     "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP1",
+                      "Miller2019_progenitor_exh1",
+                     "Miller2019_terminally_exh1",
+                     "Miller2019_effector_like1",
+                     "beura_trm1",
+                     "nonbystander1",
+                     "bystander1",
+                     "cell_cycle1",
+                     "activation_sarkar1",
+                     "lag3exh11",
+                     "lag3progexh21",
+                     "lag3exh31",
+                     "lag3mem81",
+                     "lag3eff71",
+                     "lag3act41",
+                     "lag3act61")
+
+#ggplot dotplot
+melted_data <- seurat_integrated@meta.data %>%
+                dplyr::select(seurat_clusters,any_of(gene_signatures)) %>%
+                group_by(seurat_clusters) %>%
+                summarise_if(is.numeric, mean, na.rm = TRUE) %>%
+                reshape2::melt(id.vars = "seurat_clusters")
+
+melted_data %>%
+  ggplot(aes(x = variable,
+             y = seurat_clusters,
+             size = value)) +
+  geom_point()
 ```
