--- a/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
+++ b/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
@@ -522,7 +522,7 @@ new_metadata <- seurat_integrated@meta.data %>%
                                    breaks=c(0,1,5,20,50,100,300), 
                                    labels=c("1","2-4","5-19","20-49","50-99","100-300"))) %>% #bin the counts
   column_to_rownames('barcode') %>%
-  select(clonotype_count, clonotype_id, clonotype_count_bin)
+  dplyr::select(clonotype_count, clonotype_id, clonotype_count_bin)
 seurat_integrated <- AddMetaData(seurat_integrated, metadata = new_metadata)
 ```
 
@@ -564,14 +564,14 @@ new_metadata <- seurat_integrated@meta.data %>%
   dplyr::select(tissue, clonotype_tissue_groups) 
 
 new_metadata <- new_metadata %>%
-                  mutate(tissue_shared = case_when(is.na(clonotype_tissue_groups) ~ NA_character_,
+                  mutate(clonotype_shared_tissues = case_when(is.na(clonotype_tissue_groups) ~ NA_character_,
                                                    tissue == "blood" & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&blood") ~ "blood shared",
                                                    tissue == "pLN"  & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&pLN") ~ "pLN shared",
                                                    tissue == "pancreas"  & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&pLN", "pancreas&blood") ~ "pancreas shared",
-                                                   tissue == "pancreas"  & clonotype_tissue_groups == "pancreas" ~ "pancreas non shared",
-                                                   tissue != "pancreas"  & clonotype_tissue_groups %in% c("pLN&blood", "pLN", "blood") ~ "periphery non shared"))
+                                                   tissue == "pancreas"  & clonotype_tissue_groups == "pancreas" ~ "pancreas non-shared",
+                                                   tissue != "pancreas"  & clonotype_tissue_groups %in% c("pLN&blood", "pLN", "blood") ~ "periphery non-shared"))
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
-seurat_integrated$tissue_shared <- factor(seurat_integrated$tissue_shared, levels = c("pancreas shared", "pancreas non shared", "pLN shared", "blood shared", "periphery non shared"))
+seurat_integrated$clonotype_shared_tissues <- factor(seurat_integrated$clonotype_shared_tissues, levels = c("pancreas shared", "pancreas non-shared", "pLN shared", "blood shared", "periphery non-shared"))
 ```
 
 Finally, save the integrated Seurat object. This will be used as the source for meta data in future Seurats.
